@@ -4,3 +4,4 @@ used-before-assignment:30:20:30:30:test_fail3:Using variable 'test_fail4' before
 used-before-assignment:34:22:34:32:test_fail4:Using variable 'test_fail5' before assignment:HIGH
 used-before-assignment:34:44:34:53:test_fail4:Using variable 'undefined' before assignment:HIGH
 used-before-assignment:40:18:40:28:test_fail5:Using variable 'undefined1' before assignment:HIGH
+used-before-assignment:91:10:91:18:type_annotation_never_gets_value_despite_nonlocal:Using variable 'some_num' before assignment:HIGH
